# ai-driven-proxy

./: .gitignore  LICENSE.md  README.md
ai/: README.md
ai/logs/: gradient_boosting_logs_eg.csv
ai/scripts/: ai_visualizations.py  analysis.py  cicids_to_dataset.py  classifier.py  model_train.py  ss_visualizations.py
proxy/: CMakeLists.txt  README.MD
proxy/include/: common.h
proxy/include/ai/: ai_client.h  feature_extractor.h  policy_engine.h
proxy/include/net/: proxy_server.h
proxy/include/thread/: thread_pool.h
proxy/include/util/: csv_logger.h  net_utils.h
proxy/src/: main.cpp
proxy/src/ai/: ai_client.cpp  feature_extractor.cpp  policy_engine.cpp
proxy/src/net/: proxy_server.cpp
proxy/src/thread/: thread_pool.cpp
proxy/src/util/: csv_logger.cpp  net_utils.cpp
